src/test/ui/typeck/typeck_type_placeholder_lifetime_1.stderr
error[E0244]: wrong number of type arguments: expected 1, found 2
  --> $DIR/typeck_type_placeholder_lifetime_1.rs:19:12
   |
LL |     let c: Foo<_, _> = Foo { r: &5 };
   |            ^^^^^^^^^ expected 1 type argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0244`.
